@@ -26,13 +26,7 @@
    per library and assumes no variable will be accessed using atomic.h
    macros from two different libraries.  */
 
-__make_section_unallocated
-  (".gnu.linkonce.b.__sparc32_atomic_locks, \"aw\", %nobits");
-
-volatile unsigned char __sparc32_atomic_locks[64]
-  __attribute__ ((nocommon, section (".gnu.linkonce.b.__sparc32_atomic_locks"
-				     __sec_comment),
-		  visibility ("hidden")));
+volatile unsigned char __sparc32_atomic_locks[64];
 
 #define __sparc32_atomic_do_lock(addr) \
   do								      \
